--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "fs": "0.0.1-security",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "node-couchdb": "^1.3.0",
+    "nano": "^9.0.3",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "react": "^17.0.1",
