--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-test-renderer": "^17.0.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
