--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "start": "nodemon server/index.js",
     "react-dev": "webpack --watch",
     "lint": "eslint client/src/**",
-    "seed-db": "node database/csvSeed.js",
+    "seed-csv": "time node database/csvSeed.js",
     "load_from_csv_mysql": "mysql reviews < ./database/loadFromCSV.sql",
     "seed_and_load_mysql": "time node database/csvSeed.js; time mysql reviews < ./database/loadFromCSV.sql",
     "prepare_json_couchdb": "time node database/database_couchDb/jsonSeed.js",
-    "seed_couchdb_from_json": "bash database/database_couchDb/couchDB_seed.sh"
+    "seed_couchdb_from_json": "bash database/database_couchDb/couchDB_seed.sh",
+    "seed_postgres_from_csv": "time psql reviews --username=postgres --file=database/database_postgres/postgres.sql"
+
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,7 @@
     "nano": "^9.0.3",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-multi-carousel": "^2.5.5",
