--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "prepare_json_couchdb": "time node database/database_couchDb/jsonSeed.js",
     "seed_couchdb_from_json": "bash database/database_couchDb/couchDB_seed.sh",
     "seed_postgres_from_csv": "time psql reviews --username=postgres --file=database/database_postgres/postgres.sql"
-
   },
   "repository": {
     "type": "git",
@@ -32,6 +31,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
+    "execution-time": "^1.4.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "fast-csv": "^4.3.6",
