adding k6 for the servcie and adding scenarios for post and get

--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   },
   "homepage": "https://github.com/rpt24sourcandy/fetsyReviews#readme",
   "dependencies": {
+    "@newrelic/native-metrics": "^6.0.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
+    "dotenv": "^8.2.0",
     "execution-time": "^1.4.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
@@ -41,6 +43,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nano": "^9.0.3",
+    "newrelic": "^7.1.1",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "pg": "^8.5.1",
