--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,96 @@
+
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
+orbs:
+  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
+  # Orbs reduce the amount of configuration required for common tasks.
+  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
+  node: circleci/node@4.1
+
 jobs:
-  run_reviews_tests:
+  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
+  build-and-test:
+    working_directory: ~/Desktop/SDC/fetsyreviews
+    # These next lines define a docker executor: https://circleci.com/docs/2.0/executor-types/
+    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # A list of available CircleCI docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
     docker:
-      - image: circleci/node:10
-      - image: circleci/postgres:11-alpine-ram
+      - image: circleci/node:14.8.0
+        environment:
+            PGHOST: 127.0.0.1
+            PGUSER: postgres
+      - image: circleci/postgres:9.6.2-alpine
         environment:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: admin
-          POSGRES_DB: reviews
+          POSTGRES_DB: reviews  # context / project UI env-var reference
+    # Then run your tests!
+    # CircleCI will report the results back to your VCS provider.
     steps:
+      # Checkout the code as the first step.
       - checkout
+      # Next, the node orb's install-packages step will install the dependencies from a package.json.
+      # The orb install-packages step will also automatically cache them for faster future runs.
+      - node/install-packages
+      # If you are using yarn instead npm, remove the line above and uncomment the two lines below.
+      # - node/install-packages:
+      #     pkg-manager: yarn
       - run:
-          name: install npm dependencies
+          name: Install postgress client
           command: |
-            npm install --save
+            sudo apt-get update
+            sudo apt-get install postgresql-client
+      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
+      # - run:
+      #     name: Build DB/csv & seed (combined)
+      #     command: npm run seed
       - run:
-          name: run unit tests
-          command: |
-            npm run test
-      - store_test_results:
-          path: test-results
-      - store_artifacts:
-          path: test-results
+          name: Run tests
+          command: npm run test
+
 workflows:
+  # Below is the definition of your workflow.
+  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
+  # CircleCI will run this workflow on every commit.
+  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   node-tests:
     jobs:
-      - run_reviews_tests
+      - build-and-test
+      # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
+      # - node/test
+
+
+
+# version: 2.1
+# jobs:
+#   run_reviews_tests:
+#     docker:
+#       - image: circleci/node:10
+#       - image: circleci/postgres:11-alpine-ram
+#         environment:
+#           POSTGRES_USER: postgres
+#           POSTGRES_PASSWORD: admin
+#           POSGRES_DB: reviews
+#     steps:
+#       - checkout
+#       - run:
+#           name: install npm dependencies
+#           command: |
+#             npm install --save
+#       - run:
+#           name: run unit tests
+#           command: |
+#             npm run test
+#       - store_test_results:
+#           path: test-results
+#       - store_artifacts:
+#           path: test-results
+# workflows:
+#   node-tests:
+#     jobs:
+#       - run_reviews_tests
 
 #   build:
 #     docker:
@@ -52,3 +117,8 @@ workflows:
 #   node-tests:
 #     jobs:
 #       - node/test
+
+
+
+
+
