additional changes to config.yml + seeding script for the database

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ jobs:
             sudo apt-get update
             sudo apt-get install postgresql-client
       - run: dockerize -wait tcp://localhost:5432 -timeout 1m
-      # - run:
-      #     name: Build DB/csv & seed (combined)
-      #     command: npm run seed
+      - run:
+          name: seeding postgres
+          command: npm run seed_postgres_from_csv_circleci
       - run:
           name: Run tests
           command: npm run test
