--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
         environment:
             PGHOST: 127.0.0.1
             PGUSER: postgres
-      - image: circleci/postgres:9.6.2-alpine
+      - image: circleci/postgres:11-alpine-ram
         environment:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: admin
