--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "dependencies": {
     "@newrelic/native-metrics": "^6.0.0",
     "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
     "dotenv": "^8.2.0",
@@ -45,6 +44,7 @@
     "mysql2": "^2.2.5",
     "nano": "^9.0.3",
     "newrelic": "^7.1.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "pg": "^8.5.1",
